# gp_cg_lecture_3

./: CMakeLists.txt  main.cpp  vector.cpp  vector.h
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake
